Whitespace fix, testimonial columns fixed (@waynespiegel)

--- a/src/styles/default.scss
+++ b/src/styles/default.scss
@@ -68,8 +68,8 @@ body {
   }
 
   blockquote {
-    padding: 0 25px 25px;
-    width: 425px;
+    padding: 0 20px 25px;
+    width: 400px;
     display: inline-block;
     vertical-align: top;
 
